--- a/cn-activities.html
+++ b/cn-activities.html
@@ -438,7 +438,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 荣誉奖励</small></a></li>
             </div>
 
-            <li><strong><a href="cn-activities.html"><small>▸ 兴趣爱好 ⇨</small></a></strong></li>
+            <li><strong><a href="cn-activities.html"><small>▸ 兴趣爱好 ★</small></a></strong></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="cn-activities.html">&nbsp;&nbsp;&nbsp;<small>•
                     演讲/主持</small></a></li>
