--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -460,7 +460,7 @@
             <div style="background-color: rgb(255, 255, 255);">
               <hr>
               <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="cn.html"><small>▸ 关于我
-                      ⇨</small></a></strong><br>
+                      ★</small></a></strong><br>
               </li>
 
               <li><a href="cn-research.html"><small><span style="color: rgb(97, 97, 97);">▸
