--- a/cn-research.html
+++ b/cn-research.html
@@ -472,7 +472,7 @@
                                     style="color: rgb(97, 97, 97);">▸ <strong>关于我</strong></small></a><br>
                         </li>
 
-                        <li><strong><a href="cn-research.html"><small><span>▸ 研究进展 ⇨</span></small></a></strong></li>
+                        <li><strong><a href="cn-research.html"><small><span>▸ 研究进展 ★</span></small></a></strong></li>
                         <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                             <li style="width: 50%; box-sizing: border-box;"><a
                                     href="cn-research.html#publications">&nbsp;&nbsp;&nbsp;<small>• 学术论文</small></a>
