--- a/cn-resume.html
+++ b/cn-resume.html
@@ -425,7 +425,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 行研报告</small></a></li>
             </div>
 
-            <li><strong><a href="cn-resume.html"><small>▸ 简历 ⇨</small></a></strong></li>
+            <li><strong><a href="cn-resume.html"><small>▸ 简历 ★</small></a></strong></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a
                   href="cn-resume.html#education-mobile">&nbsp;&nbsp;&nbsp;<small>• 教育背景</small></a></li>
