--- a/en-activities.html
+++ b/en-activities.html
@@ -410,7 +410,7 @@
               </div>
 
               <li><strong><a href="en-activities.html"><small><span>▸ Activities
-                        ⇨</span></small></a></strong></li>
+                        ★</span></small></a></strong></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a href="en-activities.html">&nbsp;&nbsp;&nbsp;<small>•
                       Speaking</small></a></li>
