--- a/en-contact.html
+++ b/en-contact.html
@@ -390,7 +390,7 @@
             <div style="background-color: rgba(252, 251, 248, 0);">
               <hr>
               <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="en.html"><small>▸ Biography
-                      ⇨</small></a></strong><br>
+                      ★</small></a></strong><br>
               </li>
 
               <li><a href="en-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Research
