--- a/en-research.html
+++ b/en-research.html
@@ -334,7 +334,7 @@
                     style="color: rgb(97, 97, 97);">▸ <strong>Biography</strong></small></a><br>
               </li>
               <li><strong><a href="en-research.html"><small><span>▸ Research Progress
-                        ⇨</span></small></a></strong></li>
+                        ★</span></small></a></strong></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a
                     href="en-research.html#publications">&nbsp;&nbsp;&nbsp;<small>• Publications</small></a></li>
