--- a/en-resume.html
+++ b/en-resume.html
@@ -361,7 +361,7 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Equity Research</small></a></li>
               </div>
 
-              <li><a href="en-resume.html"><strong><a href="en.html"><small>▸ CV ⇨</small></a></strong></a></li>
+              <li><a href="en-resume.html"><strong><a href="en.html"><small>▸ CV ★</small></a></strong></a></li>
               <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
                 <li style="width: 50%; box-sizing: border-box;"><a
                     href="en-resume.html#education-mobile">&nbsp;&nbsp;&nbsp;<small>• Education</small></a></li>
