--- a/es-activities.html
+++ b/es-activities.html
@@ -403,8 +403,9 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small>▸ Biografía
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small
+                    style="color: rgb(97, 97, 97);">▸ Biografía
+                  </small></a></strong><br>
             </li>
 
             <li><a href="es-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Avances de la
@@ -433,21 +434,21 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Premios</small></a></li>
             </div>
 
-            <li><a href="es-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Actividades</strong></small></a></li>
+            <li><a href="es-activities.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    Actividades ★</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Orador público</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Orador público</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#writing"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Escribiendo</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Escribiendo</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#visiting"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Visitando</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Visitando</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#travel"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• El viajar</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• El viajar</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#photography"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografía</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Fotografía</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-activities.html#sports"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Deportes</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Deportes</small></a></li>
             </div>
 
             <li><a href="es-contact.html"><small style="color: rgb(97, 97, 97);">▸
