--- a/es-research.html
+++ b/es-research.html
@@ -355,21 +355,22 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small>▸ Biografía
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small
+                    style="color: rgb(97, 97, 97);">▸ Biografía
+                  </small></a></strong><br>
             </li>
 
-            <li><a href="es-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Avances de la
-                      investigación</strong></span></small></a></li>
+            <li><a href="es-research.html"><small><strong><span style="color: rgb(253, 93, 7);">▸ Avances de la
+                      investigación ★</strong></span></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="es-research.html#publications"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Publicaciones</small></a></li>
+                  style="color: rgb(253, 93, 7);;">&nbsp;&nbsp;&nbsp;<small>• Publicaciones</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-research.html#patents"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Patentes</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Patentes</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-research.html#presentations"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Conferencias</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Conferencias</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-research.html#equity-research"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Los valores</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Los valores</small></a></li>
             </div>
 
             <li><a href="es-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Currículum
