--- a/es-resume.html
+++ b/es-resume.html
@@ -355,8 +355,9 @@
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small>▸ Biografía
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small
+                    style="color: rgb(97, 97, 97);">▸ Biografía
+                  </small></a></strong><br>
             </li>
 
             <li><a href="es-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Avances de la
@@ -372,17 +373,17 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Los valores</small></a></li>
             </div>
 
-            <li><a href="es-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Currículum
-                    vitae</strong></small></a></li>
+            <li><a href="es-resume.html"><strong><small style="color: rgb(253, 93, 7);">▸ Currículum
+                    vitae ★</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="es-resume.html#education-mobile"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Educación</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Educación</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-resume.html#academic-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Académico</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Académico</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-resume.html#industrial-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Industrias</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Industrias</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="es-resume.html#awards"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Premios</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Premios</small></a></li>
             </div>
 
             <li><a href="es-activities.html"><small style="color: rgb(97, 97, 97);">▸
