--- a/es.html
+++ b/es.html
@@ -421,7 +421,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small>▸ Biografía
-                    ⇨</small></a></strong><br>
+                    ★</small></a></strong><br>
             </li>
 
             <li><a href="es-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Avances de la
@@ -437,7 +437,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Los valores</small></a></li>
             </div>
 
-            <li><a href="es-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>CV</strong></small></a></li>
+            <li><a href="es-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>Currículum
+                    vitae</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="es-resume.html#education-mobile"
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Educación</small></a></li>
