--- a/es-contact.html
+++ b/es-contact.html
@@ -415,7 +415,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="es.html"><small>▸ Biografía
-                    ⇨</small></a></strong><br>
+                    ★</small></a></strong><br>
             </li>
 
             <li><a href="es-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>Avances de la
