--- a/en-resume.html
+++ b/en-resume.html
@@ -257,7 +257,7 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_en3.png" width="800" style="margin-top: -10px;" />
+  <img class="display-mobile" src="images/banner_mobile_en3.gif" width="800" style="margin-top: -10px;" />
 
   <div class="container">
 
