--- a/de-activities.html
+++ b/de-activities.html
@@ -319,7 +319,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_de3.png" style="margin-top: -10px;" width="800" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_de3.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
