--- a/en.html
+++ b/en.html
@@ -245,7 +245,11 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_en3.gif" width="800" style="margin-top: -10px;" />
+  <!-- Delete everything in this .container and get started on your own site! -->
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_en3.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
